<resources>
    <string name="app_name">miniprojet</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Signin</string>
    <string name="name">24/7 BASKETBALL</string>
    <string name="in">GO IN</string>
    <string name="out">GO OUT</string>
    <string name="player_post">Player post</string>
    <string name="player_height">Player height exmpl :1.6m</string>
    <string name="joker">Watch any Basketball event Live Stream.</string>
    <string name="sign_up">SIGN UP</string>
</resources>